ddi/mbor/derive/tests/compile_tests/01-union.rs
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.

#[derive(azihsm_ddi_mbor_derive::Ddi)]
union A {
    a: u32,
}

fn main() {}
